# hexagonal-fastapi

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: app.py  config.py  main.py  repository.py  scheduler.py  shell.py  worker.py
tests/: app_test.py  scheduler_test.py  shell_test.py
